# fraud_zero

./: .dockerignore  .gitattributes  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: database.py  main.py  models.py  schemas.py  security.py  settings.py
app/routers/: analysis.py  auth.py  instituicoes.py
migrations/: env.py
migrations/versions/: 5f7427c3be6b_add_cnpj_to_clientes.py  993e7f1db788_create_initial_tables.py
